PluggableAuthService changelog

  After PluggableAuthService 1.1b2

    - Repaired unit test breakage (unittest.TestCase instances have
      'failUnless'/'failIf', rather than 'assertTrue'/'assertFalse').

    - Added two new interfaces, IChallengeProtocolChooser and
      IRequestTypeSniffer. Those are used to select the 'authorization
      protocol' or 'challenger protocol' to be used for challenging
      according to the incoming request type.

    - Fixed a couple more places where Zope 2-style ``__implements__``
      where being used to standardize on using ``classImplements``.

    - Fixed fallback implementations of ``providedBy`` and
      ``implementedBy`` to always return a tuple.

    - Make sure challenge doesn't break if existing instances of the
      PluginRegistry don't yet have ``IChallengeProtocolChooser`` as a
      registered interface. (Would be nice to have some sort of
      migration for the PluginRegistry between PAS releases)

    - Don't assume that just because zope.interface can be imported
      that Five is present.

  PluggableAuthService 1.1b2 (2005/07/14)

    - Missed a 'nocall:' in the Interfaces activation form.

  PluggableAuthService 1.1b1 (2005/07/06)

    - PAS-level id mangling is no more. All (optional) mangling is now
      done on a per-plugin basis.

    - Interfaces used by PAS are now usable in both Zope 2.7 and 2.8
      (Five compatible)

  PluggableAuthService 1.0.4 (2005/01/27)

    Features Added

      - Made 'Extensions' a package, to allow importing its scripts
        as modules.

      - Declared new 'IPluggableAuthService' interface, describing additional
        PAS-specific API.

      - Exposed PAS' 'resetCredentials' and 'updateCredentials' as public
        methods.

      - Monkey-patch ZMI's logout to invoke PAS' 'resetCredentials', if
        present.

      - CookieAuth plugin now encodes and decodes cookies in the same
        format as CookieCrumbler to provide compatibility between